# Shady

./: .gitignore  CMakeLists.txt  File.cpp  File.h  Glasses.cpp  Glasses.h  Observer.cpp  Observer.h  Paint.cpp  Paint.h  README.md  Readers.cpp  Readers.h  Shades.cpp  Shades.h  Shape.cpp  Shape.h  main.cpp
